data/all_generated_tests/raw_wast_tests/br_table_InfiniteLoops_2205.wast
;; 5. **Test Description:** Test `br_table` in a loop where the operand stack management might be incorrect, leading to a mismatched stack configuration upon branching. Verify whether `wizard_engine` exits early on error, avoiding infinite loops differently from WebAssembly.

(assert_invalid
  (module (func $br_table_loop_stack_mismatch
    (block $outer (loop $inner
      (br_table $outer $inner (i32.const 1)) 
      (i32.const 42) ;; Mismatched stack configuration
    ))
  ))
  "type mismatch"
)